# waylog-cli

./: Cargo.toml  README.md  README_zh.md  overview.md
docs/: quickstart-macos-windows.md
docs/superpowers/plans/: 2026-04-24-unified-archive.md  2026-04-25-session-noise-filter.md
src/: cli.rs  error.rs  init.rs  main.rs  session_filter.rs  synchronizer.rs
src/archive/: browser.rs  layout.rs  meta.rs  mod.rs
src/browser/: chrome.rs  mod.rs
src/commands/: export.rs  mod.rs  publish.rs  pull.rs  watch.rs
src/commands/run/: cleanup.rs  mod.rs
src/exporter/: mod.rs
src/exporter/markdown/: formatter.rs  mod.rs
src/github/: mod.rs
src/output/: mod.rs
src/providers/: base.rs  claude.rs  codex.rs  gemini.rs
src/session/tracker/: mod.rs
src/utils/: mod.rs  path.rs  time.rs
src/watcher/: file_watcher.rs
