[package]
name = "waylog"
version = "0.2.3"
edition = "2021"
authors = ["WayLog Contributors"]
description = "Automatically save chats from Claude, Codex, and Gemini CLI to local Markdown files."
license = "Apache-2.0"
repository = "https://github.com/shayne-snap/waylog-cli"
homepage = "https://github.com/shayne-snap/waylog-cli"
build = "build.rs"

[[bin]]
name = "waylog"
path = "src/main.rs"

[dependencies]
# CLI framework
clap = { version = "4.5", features = ["derive"] }
dialoguer = "0.11"

# Async runtime
tokio = { version = "1.35", features = ["full"] }
# Note: tokio::signal is included in tokio with "full" features

# JSON/JSONL parsing
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"
exitcode = "1.1"
human-panic = "2.0.6"

# Path and file utilities
home = "0.5"
walkdir = "2.4"

# Hashing (for Gemini path encoding)
sha2 = "0.10"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# Output and terminal
termcolor = "1.4"
console = "0.15"
indicatif = "0.17"

# Cross-platform process management
which = "6.0"

# Async trait support
async-trait = "0.1"

# UUID generation
uuid = { version = "1.6", features = ["v4"] }
regex = "1.10"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
base64 = "0.22"
rusqlite = { version = "0.32", features = ["bundled"] }

[dev-dependencies]
tempfile = "3.8"

[build-dependencies]
clap = { version = "4.5", features = ["derive"] }
clap_mangen = "0.2"
